--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -18,7 +18,7 @@ html, body, #map-canvas {
 	border: 2px solid #595959;
 	background-color: #50000E;
 	color: #fff;
-	width: 30%;
+	width: 573px;
 	display: none;
 	text-align: center;
 	font-size: 15px;
@@ -27,8 +27,8 @@ html, body, #map-canvas {
 
 #errorBox {
 	position: absolute;
-	top: 91%;
-	left: 2%;
+	top: 85%;
+	left: 5%;
 	z-index: 5;
 	padding: 5px;
 	border-radius: 5px;
@@ -38,37 +38,26 @@ html, body, #map-canvas {
 	border: 2px solid #595959;
 	background-color: #50000E;
 	color: #fff;
-	width: 30%;
+	width: 35%;
 	display: none;
 	text-align: center;
 	font-size: 15px;
 	font-weight: 400;
 }
 
-/* #panel {
-	display: none;
-	float: right;
-	position: absolute;
-	right: -300px;
-	height: 100%;
-	width: 300px;
-	background-color: #fff;
-	font-family: Roboto, Arial, sans-serif;
-	font-size: 13px;
-	font-weight: 300;
-}
- */
 #boxFlightPlan {
 	 text-transform: uppercase;
 	 font-family: Verdana, Arial, sans-serif;
 	 font-size: 13px;
 	 font-weight: bold;
+	 overflow: auto;
+	 resize: none;
 } 
 #flightplan-help {
 	z-index: 1000;
 	position: absolute;
 	top: 32px;
-	left: 11.4%;
+	left: 180px;
 	font-family: Verdana, Arial, sans-serif;
 	text-decoration: none;
 	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
