--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -27,8 +27,8 @@ html, body, #map-canvas {
 
 #errorBox {
 	position: absolute;
-	top: 85%;
-	left: 5%;
+	top: 90%;
+	left: 2%;
 	z-index: 5;
 	padding: 5px;
 	border-radius: 5px;
@@ -38,7 +38,7 @@ html, body, #map-canvas {
 	border: 2px solid #595959;
 	background-color: #50000E;
 	color: #fff;
-	width: 35%;
+	width: 20%;
 	display: none;
 	text-align: center;
 	font-size: 15px;
@@ -56,19 +56,20 @@ html, body, #map-canvas {
 #flightplan-help {
 	z-index: 1000;
 	position: absolute;
-	top: 32px;
-	left: 180px;
+	top: 190px;
+	left: 5%;
 	font-family: Verdana, Arial, sans-serif;
 	text-decoration: none;
 	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
 	border: 1px solid #000;
 	font-size: 12px;
 	font-weight: 500;
-	background-color: #000;
+	background-color: rgba(0, 0, 0, 0.55);
 	color: #fff;
 	border-radius: 2px;
 	padding: 10px;
 	display: none;
+	width: 340px;
 }
 #flightplan-button {
 	position: absolute;
@@ -115,6 +116,23 @@ html, body, #map-canvas {
 	width: 50px;
 	border: 2px solid black;
 	white-space: nowrap;
+}
+.labelsInfoRoute {
+	color: black;
+	background-color: white;
+	font-family: "Lucida Grande", "Arial", sans-serif;
+	font-size: 12px;
+	font-weight: 500;
+	text-align: center;
+	
+	min-width: 70px;
+    display: inline-block;
+    padding-left: 5px;
+    padding-right: 5px;
+	
+	border: 2px solid blue;
+	white-space: nowrap;
+	border-radius: 23px;
 }
 .runwayTable {
 	font-family: "Arial", sans-serif;
