--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -124,12 +124,10 @@ html, body, #map-canvas {
 	font-size: 12px;
 	font-weight: 500;
 	text-align: center;
-	
 	min-width: 70px;
     display: inline-block;
     padding-left: 5px;
     padding-right: 5px;
-	
 	border: 2px solid blue;
 	white-space: nowrap;
 	border-radius: 23px;
@@ -150,7 +148,10 @@ html, body, #map-canvas {
 	color: blue;
 	font-weight: bold;
 }
-
+.routeInfo {
+	color: blue;
+	font-weight: bold;
+}
 .rotate {
      -webkit-transform : rotate(66deg); 
     -moz-transform : rotate(66deg); 
