--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -62,14 +62,14 @@ html, body, #map-canvas {
 	text-decoration: none;
 	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
 	border: 1px solid #000;
-	font-size: 12px;
+	font-size: 11px;
 	font-weight: 500;
 	background-color: rgba(0, 0, 0, 0.55);
 	color: #fff;
 	border-radius: 2px;
 	padding: 10px;
 	display: none;
-	width: 340px;
+	width: 180px;
 }
 #flightplan-button {
 	position: absolute;
@@ -193,4 +193,27 @@ html, body, #map-canvas {
     -ms-transform : rotate(66deg); 
     -o-transform : rotate(66deg); 
     transform : rotate(66deg); 
+}
+#flightplan-info {
+    z-index: 9999;
+    position: absolute;
+    top: 190px;
+    left: 300px;
+    font-family: Verdana, Arial, sans-serif;
+    text-decoration: none;
+    box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
+    border: 1px solid #000;
+    font-size: 12px;
+    font-weight: 500;
+    background-color: rgba(0, 0, 0, 0.75);
+    color: yellow;
+    border-radius: 2px;
+    padding: 10px;
+    display: none;
+    width: 350px;
+}
+.flightPlan-info-label {
+    font-family: monospace;
+    font-size: 13px;
+    color: white;
 }
