--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -85,11 +85,12 @@ html, body, #map-canvas {
 	padding: 5px;
 	cursor: pointer;
 	border-radius: 5px;
+	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
 }
 #plane-panel {
 	position: absolute;
 	top: 28px;
-	left: 205px;
+	left: 190px;
 	font-family: Verdana, Arial, sans-serif;
 	text-decoration: none;
 	font-size: 12px;
@@ -109,6 +110,7 @@ html, body, #map-canvas {
 	padding: 5px;
 	cursor: pointer;
 	border-radius: 5px;
+	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
 }
 #flightplan-button.down {
 	background-color: rgba(0,0,0,0.70);
