--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -48,7 +48,7 @@ html, body, #map-canvas {
 #boxFlightPlan {
 	 text-transform: uppercase;
 	 font-family: Verdana, Arial, sans-serif;
-	 font-size: 13px;
+	 font-size: 14px;
 	 font-weight: bold;
 	 overflow: auto;
 	 resize: none;
@@ -221,10 +221,11 @@ html, body, #map-canvas {
 }
 #flightplan-loading {
 	position: absolute; 
-	top: 42px; 
-	left: 30px; 
+	top: 73px; 
+	left: 10px; 
 	z-index: 9999;
-	color: black;
+	color: #454545;
 	font-family: monospace;
-	font-size:11px;
+	font-size:15px;
+	font-weight: bold;
 }
