--- a/src/main/resource/map.css
+++ b/src/main/resource/map.css
@@ -233,3 +233,53 @@ html, body, #map-canvas {
 	font-size:15px;
 	font-weight: bold;
 }
+#labelRoute-button {
+	position: absolute;
+	top: 28px;
+	left: 300px;
+	font-family: Verdana, Arial, sans-serif;
+	text-decoration: none;
+	border: 1px solid #999;
+	font-size: 12px;
+	font-weight: 500;
+	background-color: rgba(0,0,0,0.70);
+	border-radius: 2px;
+	padding: 5px;
+	cursor: pointer;
+	border-radius: 5px;
+	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
+	color: #fff;$
+}
+#labelRoute-button.down {
+	background-color: rgba(0,0,0,0.70);
+	color: #fff;
+}
+#labelRoute-button.up {
+	background-color: rgba(255,255,255,0.70);
+	color: #000;
+}
+#labelWaypoint-button {
+	position: absolute;
+	top: 28px;
+	left: 390px;
+	font-family: Verdana, Arial, sans-serif;
+	text-decoration: none;
+	border: 1px solid #999;
+	font-size: 12px;
+	font-weight: 500;
+	background-color: rgba(0,0,0,0.70);
+	border-radius: 2px;
+	padding: 5px;
+	cursor: pointer;
+	border-radius: 5px;
+	box-shadow: 4px 4px 4px 0px rgba(50, 50, 50, 0.75);
+	color: #fff;$
+}
+#labelWaypoint-button.down {
+	background-color: rgba(0,0,0,0.70);
+	color: #fff;
+}
+#labelWaypoint-button.up {
+	background-color: rgba(255,255,255,0.70);
+	color: #000;
+}
